# Django-YouTubeVideoSummarizer-OpenAI

./: .gitignore  README.md  pyproject.toml
YouTubeVideoSummarizer/: manage.py
YouTubeVideoSummarizer/YouTubeVideoSummarizer/: asgi.py  settings.py  urls.py  wsgi.py
YouTubeVideoSummarizer/summarizer/: __init__.py  apps.py  constants.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
YouTubeVideoSummarizer/summarizer/migrations/: 0001_initial.py  0002_alter_summary_summary_alter_summary_title.py
